@startuml
'https://plantuml.com/class-diagram
hide empty methods
hide empty attributes
skinparam classAttributeIconSize 0

class PortManager{
    -name
}

class Company{}

class Ship {
    -mmsi
    -imo
    -callSign
    -shipName
    -vesselType
    -length
    -width
    -draft
    -cargo
}

class CargoManifest{
    -containersInfo
    -registationTime
}

class ShipTripDocumentation{
    -shipTripID
    -mmsi
    -loadingCargoManifest
    -unloadingCargoManifest
}

class Container{
    -containerId
    -payload
    -tare
    -gross
    -isoCode
}

PortManager "1" -- "1..*" ShipTripDocumentation : analyses >
Company "1" -- "1..*" Ship : owns >
Ship "1" -- "1..*" ShipTripDocumentation : owns >
CargoManifest "1..*" -- "1..*" Container : contains >
ShipTripDocumentation "1" -- "1..2" CargoManifest : contains >

@enduml